add comments in the jupyter notebooks

--- a/hydro_session/hydro_evo.ipynb
+++ b/hydro_session/hydro_evo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -15,15 +15,14 @@
     "from numpy import *\n",
     "from os import path\n",
     "home = path.expanduser(\"~\")\n",
+    "desktop = path.join(home, \"Desktop\")\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "\n",
     "# define plot style\n",
     "width = 0.05\n",
     "plotMarkerSize = 8\n",
     "labelfontsize = 15\n",
-    "\n",
     "import matplotlib as mpl\n",
     "mpl.rcParams['figure.figsize'] = [6., 4.5]\n",
     "mpl.rcParams['lines.linewidth'] = 2\n",
@@ -52,7 +51,22 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "../shear_0.15/momentum_anisotropy_eta_-0.5_0.5.dat not found.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-cd198248a23a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# load the data table(s)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m data1 = loadtxt(path.join(working_path, \"shear_0.15\",\n\u001b[0;32m----> 3\u001b[0;31m                           \"momentum_anisotropy_eta_-0.5_0.5.dat\"))\n\u001b[0m\u001b[1;32m      4\u001b[0m data2 = loadtxt(path.join(working_path, \"shear_0.15_and_bulk\",\n\u001b[1;32m      5\u001b[0m                           \"momentum_anisotropy_eta_-0.5_0.5.dat\"))\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mloadtxt\u001b[0;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding, max_rows)\u001b[0m\n\u001b[1;32m    966\u001b[0m             \u001b[0mfname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    967\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0m_is_string_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 968\u001b[0;31m             \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_datasource\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    969\u001b[0m             \u001b[0mfencoding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'encoding'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'latin1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    970\u001b[0m             \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/numpy/lib/_datasource.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(path, mode, destpath, encoding, newline)\u001b[0m\n\u001b[1;32m    267\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    268\u001b[0m     \u001b[0mds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataSource\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdestpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 269\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnewline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    270\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    271\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/numpy/lib/_datasource.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(self, path, mode, encoding, newline)\u001b[0m\n\u001b[1;32m    621\u001b[0m                                       encoding=encoding, newline=newline)\n\u001b[1;32m    622\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 623\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mIOError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%s not found.\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    624\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    625\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOSError\u001b[0m: ../shear_0.15/momentum_anisotropy_eta_-0.5_0.5.dat not found."
+     ]
+    }
+   ],
    "source": [
     "# load the data table(s)\n",
     "data1 = loadtxt(path.join(working_path, \"shear_0.15\",\n",
@@ -882,14 +896,18 @@
    ],
    "source": [
     "fig = plt.figure()\n",
+    "\n",
     "plt.plot(data1[:, 0], data1[:, -1], '-k', label=labels[0])\n",
     "plt.plot(data2[:, 0], data2[:, -1], '--r', label=labels[1])\n",
+    "\n",
+    "plt.legend(loc=0)\n",
     "plt.xlabel(r\"$\\tau$ [fm]\")\n",
     "plt.ylabel(r\"$\\langle T \\rangle$ [GeV]\")\n",
     "#plt.ylim([0, 0.4])\n",
-    "plt.legend(loc=0)\n",
     "plt.tight_layout()\n",
-    "#plt.savefig(path.join(home, 'Desktop/avg_temperature_evo.pdf'), fmt='pdf')"
+    "\n",
+    "# save plot to the Desktop\n",
+    "#plt.savefig(path.join(desktop, 'avg_temperature_evo'))"
    ]
   },
   {
@@ -1706,14 +1724,17 @@
     "v_avg2 = sqrt(1. - 1./gamma**2.)\n",
     "\n",
     "fig = plt.figure()\n",
+    "\n",
     "plt.plot(data1[:, 0], v_avg1, '-k', label=labels[0])\n",
     "plt.plot(data2[:, 0], v_avg2, '--r', label=labels[1])\n",
+    "\n",
     "plt.legend(loc=0)\n",
     "plt.xlabel(r\"$\\tau$ [fm]\")\n",
     "plt.ylabel(r\"$\\langle v \\rangle$\")\n",
     "#plt.ylim([0, 1.0])\n",
     "plt.tight_layout()\n",
-    "#plt.savefig(path.join(home, 'Desktop/avg_v_evo.pdf'), fmt='pdf')"
+    "\n",
+    "#plt.savefig(path.join(desktop, 'avg_v_evo'))"
    ]
   },
   {
@@ -2526,12 +2547,16 @@
     "n = 2 # n defines which order of ecc_n we want to see\n",
     "\n",
     "fig = plt.figure()\n",
+    "\n",
     "plt.plot(ecc_data1[:, 0], ecc_data1[:, n], '-k', label=labels[0])\n",
     "plt.plot(ecc_data2[:, 0], ecc_data2[:, n], '--r', label=labels[1])\n",
+    "\n",
     "plt.legend(loc=0)\n",
     "plt.xlabel(r\"$\\tau$ [fm]\")\n",
     "plt.ylabel(r\"$\\epsilon_{}$\".format(n))\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "\n",
+    "#plt.savefig(path.join(desktop, 'ecc_{}_evo'.format(n)))"
    ]
   },
   {
@@ -3341,12 +3366,15 @@
    ],
    "source": [
     "fig = plt.figure()\n",
+    "\n",
     "plt.plot(data1[:, 0], data1[:, 2], '-k', label=labels[0])\n",
     "plt.plot(data2[:, 0], data2[:, 2], '--r', label=labels[1])\n",
+    "\n",
     "plt.xlabel(r\"$\\tau$ [fm]\")\n",
     "plt.ylabel(r\"$\\langle \\epsilon_p \\rangle$\")\n",
     "plt.tight_layout()\n",
-    "#plt.savefig(path.join(home, 'Desktop/avg_v_evo.pdf'), fmt='pdf')"
+    "\n",
+    "#plt.savefig(path.join(desktop, 'ecc_p_evo'))"
    ]
   },
   {
@@ -3373,7 +3401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
