--- a/hydro_session/hydro_movie.ipynb
+++ b/hydro_session/hydro_movie.ipynb
@@ -15,6 +15,8 @@
     "from numpy import *\n",
     "from os import path\n",
     "home = path.expanduser(\"~\")\n",
+    "desktop = path.join(home, \"Desktop\")\n",
+    "\n",
     "from matplotlib import animation\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -49,15 +51,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define the contour levels and color map\n",
+    "# define the contour levels\n",
     "levels = linspace(0.13, 0.35, 50)\n",
     "\n",
+    "# define a custmized color map\n",
     "colors1 = array([[1, 1, 1, 1]])\n",
     "colors2 = plt.cm.jet(linspace(0., 1, 10))\n",
     "colors = vstack((colors1, colors2))\n",
-    "my_cmap = mpl.colors.LinearSegmentedColormap.from_list('my_colormap', colors)\n",
-    "#my_cmap = mpl.cm.get_cmap('jet')\n",
-    "#my_cmap.set_under('w')"
+    "my_cmap = mpl.colors.LinearSegmentedColormap.from_list('my_colormap', colors)"
    ]
   },
   {
@@ -78,18 +79,24 @@
     }
    ],
    "source": [
-    "# data preparation\n",
+    "# load hydrodynamic evolution data\n",
     "data = fromfile(\n",
     "    path.join(working_path, \"shear_0.15_and_bulk\",\n",
-    "                          \"evolution_for_movie_xyeta_MUSIC.dat\"),\n",
-    "    dtype=float32)\n",
+    "              \"evolution_for_movie_xyeta_MUSIC.dat\"), dtype=float32)\n",
+    "\n",
+    "# read header about the grid information\n",
     "header = data[0:12]\n",
-    "data = data[12:].reshape(-1, 14)\n",
+    "\n",
+    "# read in data and reshape it to the correct form\n",
+    "data = data[12:].reshape(-1, header[-1])\n",
+    "\n",
+    "# get the list for tau frame\n",
     "tau_list = unique(data[:, 0])\n",
     "ntau = len(tau_list)\n",
     "tau0= header[0]; dtau = header[1];\n",
     "tau_list = array([tau0 + i*dtau for i in range(ntau)])\n",
     "\n",
+    "# define 3D grid in x, y, and eta_s (space-time rapidity)\n",
     "neta = int(header[8])\n",
     "eta_size = -2.*header[10]\n",
     "deta = header[9]\n",
@@ -105,6 +112,7 @@
     "dy = header[6]\n",
     "y = array([-y_size/2.+i*dy for i in range(ny)])\n",
     "\n",
+    "# create 3D grids for energy density, temperature, and velocity\n",
     "ed = zeros([ntau, neta, nx, ny])\n",
     "T  = zeros([ntau, neta, nx, ny])\n",
     "vx = zeros([ntau, neta, nx, ny])\n",
@@ -122,6 +130,8 @@
     "        T[itau, eta_idx, x_idx, y_idx]  = data_cut[igrid, 7]\n",
     "        vx[itau, eta_idx, x_idx, y_idx] = data_cut[igrid, 9]/u0\n",
     "        vy[itau, eta_idx, x_idx, y_idx] = data_cut[igrid, 10]/u0\n",
+    "\n",
+    "# print out some useful information about the evolution file\n",
     "print(\"Read in data completed.\")\n",
     "print(\"ntau = {0}, tau_min = {1:.2f} fm, tau_max = {2:.2f} fm, dtau = {3:.3f} fm\".format(\n",
     "                            ntau, tau_list[0], tau_list[-1], dtau))\n",
@@ -936,7 +946,10 @@
     }
    ],
    "source": [
+    "# make a 2D meshgrid in the transverse plane\n",
     "X, Y = meshgrid(x, y)\n",
+    "\n",
+    "# make the contour plot\n",
     "fig = plt.figure()\n",
     "cont = plt.contourf(X, Y, T[0, 0, :, :], levels, cmap=my_cmap, extend='both')\n",
     "cbar = fig.colorbar(cont)\n",
@@ -1751,7 +1764,9 @@
    ],
    "source": [
     "Tau, X = meshgrid(tau_list, x)\n",
-    "y_idx = int(ny/2)\n",
+    "\n",
+    "y_idx = int(ny/2)  # pick the central point in the y direction\n",
+    "\n",
     "fig = plt.figure()\n",
     "cont = plt.contourf(Tau, X, T[:, 0, :, y_idx].transpose(), levels,\n",
     "                    cmap=my_cmap, extend='both')\n",
@@ -2566,6 +2581,8 @@
    ],
    "source": [
     "X, Y = meshgrid(x, y)\n",
+    "\n",
+    "# first plot the first frame as a contour plot\n",
     "fig = plt.figure()\n",
     "cont = plt.contourf(X, Y, T[0, 0, :, :].transpose(), levels,\n",
     "                    cmap=my_cmap, extend='both')\n",
@@ -2575,15 +2592,19 @@
     "plt.ylabel(r\"$y$ (fm)\")\n",
     "plt.tight_layout()\n",
     "\n",
-    "# animation function\n",
+    "# define animation function to update the contour at every time frame\n",
     "def animate(i): \n",
     "    global cont, time_text\n",
     "    for c in cont.collections:\n",
     "        c.remove()  # removes only the contours, leaves the rest intact\n",
     "    cont = plt.contourf(X, Y, T[i, 0, :, :], levels, cmap=my_cmap, extend='both')\n",
     "    time_text.set_text(r\"$\\tau = {0:4.2f}$ fm/c\".format(tau_list[i]))\n",
-    "    return cont, time_text  \n",
+    "    return cont, time_text\n",
+    "\n",
+    "# create the animation\n",
     "anim = animation.FuncAnimation(fig, animate, frames=ntau, repeat=False)\n",
+    "\n",
+    "# save the animation to a file\n",
     "#anim.save('animation.mp4', fps=24)"
    ]
   },
@@ -3390,10 +3411,13 @@
     }
    ],
    "source": [
-    "nskip = 2\n",
-    "v_mag = sqrt(vx[-1, 0, :, :]**2 + vy[-1, 0, :, :]**2.)\n",
+    "nskip = 2  # only plot every other point to speed up the live animation\n",
+    "\n",
     "X, Y = meshgrid(x, y)\n",
     "\n",
+    "v_mag = sqrt(vx[-1, 0, :, :]**2 + vy[-1, 0, :, :]**2.)\n",
+    "\n",
+    "# first plot the first frame as the contour plot\n",
     "fig = plt.figure()\n",
     "cont = plt.contourf(X[::nskip, ::nskip], Y[::nskip, ::nskip],\n",
     "                    T[0, 0, ::nskip, ::nskip],\n",
@@ -3408,6 +3432,7 @@
     "plt.xlim(-10, 10)\n",
     "plt.ylim(-10, 10)\n",
     "\n",
+    "# update the temperature contour and velocity vector field \n",
     "def update_quiver(num, Q, X, Y):\n",
     "    global cont, time_text\n",
     "    for c in cont.collections:\n",
@@ -3424,8 +3449,11 @@
     "                   U, V, units='xy', scale_units='xy', scale=0.5, color='b')\n",
     "    return Q, cont, time_text  \n",
     "\n",
+    "# create the animation\n",
     "anim = animation.FuncAnimation(fig, update_quiver, fargs=(Q, X, Y),\n",
     "                               frames=ntau, blit=False, repeat=False)\n",
+    "\n",
+    "# save the animation\n",
     "#anim.save('animation.mp4', fps=24)"
    ]
   },
@@ -3453,7 +3481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
