--- a/hydro_session/hydro_evo-CollisionSystemsComp.ipynb
+++ b/hydro_session/hydro_evo-CollisionSystemsComp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -60,8 +60,8 @@
    "outputs": [],
    "source": [
     "# change the following line to your result folder(s)\n",
-    "RunFolder1 = \"AuAu200_C0-10\"\n",
-    "RunFolder2 = \"PbPb5020_C20-30\"\n",
+    "RunFolder1 = \"Run_AuAu200_C0-10\"\n",
+    "RunFolder2 = \"Run_PbPb5020_C20-30\"\n",
     "\n",
     "# label our calculations\n",
     "labels=[r\"0-10% AuAu @ 200 GeV\", r\"20-30% PbPb @ 5.02 TeV\"]"
