--- a/hydro_session/hydro_evo-ViscosityComp.ipynb
+++ b/hydro_session/hydro_evo-ViscosityComp.ipynb
@@ -60,8 +60,8 @@
    "outputs": [],
    "source": [
     "# change the following line to your result folder(s)\n",
-    "RunFolder1 = \"shear_only\"\n",
-    "RunFolder2 = \"shear_and_bulk\"\n",
+    "RunFolder1 = \"Run_shear_only\"\n",
+    "RunFolder2 = \"Run_shear_and_bulk\"\n",
     "\n",
     "# label our calculations\n",
     "labels=[r\"$\\eta/s = 0.15$\", r\"$\\eta/s = 0.15 + \\zeta/s(T)$\"]"
