--- a/hydro_session/hydro_movie-TestRun.ipynb
+++ b/hydro_session/hydro_movie-TestRun.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "# define the contour levels\n",
-    "levels = linspace(0.13, 0.25, 50)\n",
+    "levels = linspace(0.13, 0.30, 50)\n",
     "\n",
     "# define a custmized color map\n",
     "colors1 = array([[1, 1, 1, 1]])\n",
@@ -3437,10 +3437,11 @@
     "v_mag = sqrt(vx[-1, 0, :, :]**2 + vy[-1, 0, :, :]**2.)\n",
     "\n",
     "# first plot the first frame as the contour plot\n",
+    "levels2 = (linspace(0.10**0.25, 0.3**0.25, 30))**(4.)\n",
     "fig = plt.figure()\n",
     "cont = plt.contourf(X[::nskip, ::nskip], Y[::nskip, ::nskip],\n",
     "                    T[0, 0, ::nskip, ::nskip],\n",
-    "                    levels, cmap='Reds', extend='both')\n",
+    "                    levels2, cmap='Reds', extend='both')\n",
     "Q = plt.quiver(X[::nskip, ::nskip], Y[::nskip, ::nskip],\n",
     "              vy[0, 0, ::nskip, ::nskip],\n",
     "              vx[0, 0, ::nskip, ::nskip],\n",
@@ -3458,7 +3459,7 @@
     "        c.remove()  # removes only the contours, leaves the rest intact\n",
     "    cont = plt.contourf(X[::nskip, ::nskip], Y[::nskip, ::nskip],\n",
     "                        T[num, 0, ::nskip, ::nskip],\n",
-    "                        levels, cmap='Reds', extend='both')\n",
+    "                        levels2, cmap='Reds', extend='both')\n",
     "    time_text.set_text(r\"$\\tau = {0:4.2f}$ fm/c\".format(tau_list[num])) \n",
     "    \n",
     "    U = vy[num, 0, ::nskip, ::nskip]\n",
