add python scripts as backup in case jupyter notebook does not work

--- a/hydro_session/hydro_evo-CollisionSystemsComp.ipynb
+++ b/hydro_session/hydro_evo-CollisionSystemsComp.ipynb
@@ -3370,6 +3370,7 @@
     "plt.plot(data1[:, 0], data1[:, 2], '-k', label=labels[0])\n",
     "plt.plot(data2[:, 0], data2[:, 2], '--r', label=labels[1])\n",
     "\n",
+    "plt.legend(loc=0)\n",
     "plt.xlabel(r\"$\\tau$ [fm]\")\n",
     "plt.ylabel(r\"$\\langle \\epsilon_p \\rangle$\")\n",
     "plt.tight_layout()\n",
@@ -3401,7 +3402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
