--- a/hydro_session/analyze_particle_spectra_and_vn.ipynb
+++ b/hydro_session/analyze_particle_spectra_and_vn.ipynb
@@ -82,7 +82,7 @@
     }
    ],
    "source": [
-    "data_filename = \"particle_list.dat\"\n",
+    "data_filename = \"hadron_list.dat\"\n",
     "nev = 0\n",
     "event_list = []\n",
     "with open(path.join(working_path, data_filename)) as fp:\n",
@@ -1790,7 +1790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
