--- a/hydro_session/hydro_evo-ViscosityComp.ipynb
+++ b/hydro_session/hydro_evo-ViscosityComp.ipynb
@@ -15,7 +15,6 @@
     "from numpy import *\n",
     "from os import path\n",
     "home = path.expanduser(\"~\")\n",
-    "desktop = path.join(home, \"Desktop\")\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -43,7 +42,7 @@
     "mpl.rcParams['font.size'] = 15\n",
     "mpl.rcParams['savefig.format'] = \"pdf\"\n",
     "\n",
-    "working_path = \"../\""
+    "working_path = path.join(home, \"JETSCAPE/JShydro\")"
    ]
   },
   {
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +907,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# save plot to the Desktop\n",
-    "#plt.savefig(path.join(desktop, 'avg_temperature_evo'))"
+    "#plt.savefig('RunViscosityComp_avg_T_evo'))"
    ]
   },
   {
@@ -924,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1734,7 +1733,7 @@
     "plt.ylabel(r\"$\\langle v \\rangle$\")\n",
     "plt.tight_layout()\n",
     "\n",
-    "#plt.savefig(path.join(desktop, 'avg_v_evo'))"
+    "#plt.savefig('RunViscosityComp_avg_v_evo'))"
    ]
   },
   {
@@ -1750,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2556,7 +2555,7 @@
     "plt.ylabel(r\"$\\epsilon_{}$\".format(n))\n",
     "plt.tight_layout()\n",
     "\n",
-    "#plt.savefig(path.join(desktop, 'ecc_{}_evo'.format(n)))"
+    "#plt.savefig('RunViscosityComp_ecc_{}_evo'.format(n)))"
    ]
   },
   {
@@ -2571,7 +2570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3374,7 +3373,7 @@
     "plt.ylabel(r\"$\\langle \\epsilon_p \\rangle$\")\n",
     "plt.tight_layout()\n",
     "\n",
-    "#plt.savefig(path.join(desktop, 'ecc_p_evo'))"
+    "#plt.savefig('RunViscosityComp_momentumaniso_evo'))"
    ]
   },
   {
@@ -3401,7 +3400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
