--- a/hydro_session/hydro_evo-TestRun.ipynb
+++ b/hydro_session/hydro_evo-TestRun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -15,7 +15,6 @@
     "from numpy import *\n",
     "from os import path\n",
     "home = path.expanduser(\"~\")\n",
-    "desktop = path.join(home, \"Desktop\")\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -43,7 +42,7 @@
     "mpl.rcParams['font.size'] = 15\n",
     "mpl.rcParams['savefig.format'] = \"pdf\"\n",
     "\n",
-    "working_path = \"../\""
+    "working_path = path.join(home, \"JETSCAPE/JShydro\")"
    ]
   },
   {
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1736,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2554,7 +2553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3381,7 +3380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
