--- a/hydro_session/hydro_evo-TestRun.ipynb
+++ b/hydro_session/hydro_evo-TestRun.ipynb
@@ -42,7 +42,7 @@
     "mpl.rcParams['font.size'] = 15\n",
     "mpl.rcParams['savefig.format'] = \"pdf\"\n",
     "\n",
-    "working_path = path.join(home, \"JETSCAPE/JShydro\")"
+    "working_path = path.join(home, \"JETSCAPE/build\")"
    ]
   },
   {
@@ -898,7 +898,8 @@
     "plt.legend(loc=0)\n",
     "plt.xlabel(r\"$\\tau$ [fm]\")\n",
     "plt.ylabel(r\"$\\langle T \\rangle$ [GeV]\")\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "plt.savefig(\"TestRun_avgT_evo\")"
    ]
   },
   {
@@ -1719,7 +1720,8 @@
     "plt.legend(loc=0)\n",
     "plt.xlabel(r\"$\\tau$ [fm]\")\n",
     "plt.ylabel(r\"$\\langle v \\rangle$\")\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "plt.savefig(\"TestRun_avgv_evo\")"
    ]
   },
   {
@@ -2538,7 +2540,8 @@
     "plt.legend(loc=0)\n",
     "plt.xlabel(r\"$\\tau$ [fm]\")\n",
     "plt.ylabel(r\"$\\epsilon_{}$\".format(n))\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "plt.savefig(\"TestRun_ecc_evo\")"
    ]
   },
   {
@@ -3353,7 +3356,8 @@
     "\n",
     "plt.xlabel(r\"$\\tau$ [fm]\")\n",
     "plt.ylabel(r\"$\\langle \\epsilon_p \\rangle$\")\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "plt.savefig(\"TestRun_momentumaniso_evo\")"
    ]
   },
   {
