switched to Gojko's precompiled docker

--- a/med_res_session/hydro_movie-medium_response.ipynb
+++ b/med_res_session/hydro_movie-medium_response.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "# define the contour levels\n",
-    "levels = linspace( -5, 5, 201)\n",
+    "levels = linspace( -10.5, 10.5, 201)\n",
     "\n",
     "# define a custmized color map\n",
     "colors1 = array([[1, 1, 1, 1]])\n",
@@ -320,6 +320,7 @@
     "                    cmap=my_cmap, extend='both')\n",
     "time_text = plt.text(-12, 11, r\"$\\tau = {0:4.2f}$ fm/c\".format(tau_list[0]))\n",
     "cbar = fig.colorbar(cont)\n",
+    "cbar.set_label(r\"$\\Delta T$ (MeV)\")\n",
     "plt.xlabel(r\"$x$ (fm)\")\n",
     "plt.ylabel(r\"$y$ (fm)\")\n",
     "plt.xlim([-13.5, 13.5])\n",
@@ -367,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
